<resources xmlns:ns1="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">HCT Control</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string-array name="nav_drawer_items">
        <item>Statusbar</item>
        <item>General</item>
        <item>Panel de notificaciones</item>
        <item>Pantalla de bloqueo</item>
        <item>Sonidos y Notificaciones</item>
        <item>Teléfono y Llamadas</item>
        <item>TW Launcher</item>
        <item>Utilidades</item>
        <item>Theme</item>
        <item>Copiar/Restaurar</item>
        <item>Changelog</item>
        <item>Acerca de</item>
    </string-array>
    <string-array name="clock_position_entries">
        <item>Right clock</item>
        <item>Center Clock</item>
        <item>Left Clock</item>
    </string-array>
    <string-array name="clock_position_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="some_entries">
        <item>Right clock</item>
        <item>Center Clock</item>
        <item>Left Clock</item>
    </string-array>
    <string-array name="some_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="notification_panel_background_images_entries">
        <item>Stock</item>
        <item>Personalizado 1</item>
        <item>Personalizado 2</item>
        <item>Personalizado 3</item>
        <item>Personalizado 4</item>
    </string-array>
    <string-array name="notification_panel_background_images_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="kuaijieanniushuliang_entries">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="kuaijieanniushuliang_values">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="sysbar_recent">
        <item>Oculto</item>
        <item>Botón Recientes</item>
        <item>Botón Bloqueo</item>
        <item>Botón Home</item>
    </string-array>
    <string-array name="sysbar_recent_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="volbtn_timeout_entries">
        <item>100ms</item>
        <item>150ms</item>
        <item>200ms</item>
        <item>250ms</item>
        <item>300ms</item>
        <item>350ms</item>
        <item>400ms</item>
        <item>450ms</item>
        <item>500ms</item>
    </string-array>
    <string-array name="volbtn_timeout_values">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>350</item>
        <item>400</item>
        <item>450</item>
        <item>500</item>
    </string-array>
    <string-array name="lockscreen_clock_position_entries">
        <item>Arriba izquierda</item>
        <item>Arriba centro</item>
        <item>Arriba derecha</item>
        <item>Abajo izquierda</item>
        <item>Abajo centro</item>
        <item>Abajo derecha</item>
    </string-array>
    <string-array name="lockscreen_clock_position_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="lockscreen_font_style_entries">
        <item>Android Clock</item>
        <item>Android Clock Highlight</item>
        <item>Android Clock Solid</item>
        <item>Archibald</item>
        <item>Caviar Dreams</item>
        <item>Choco Cooky</item>
        <item>Cutive Mono</item>
        <item>Cool Jazz</item>
        <item>Rosemary</item>
        <item>Ultima</item>
    </string-array>
    <string-array name="lockscreen_font_style_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="listview_animation_entries">
        <item>@string/listview_off</item>
        <item>@string/listview_wave_left</item>
        <item>@string/listview_wave_right</item>
        <item>@string/listview_scale</item>
        <item>@string/listview_alpha</item>
        <item>@string/listview_stack_top</item>
        <item>@string/listview_stack_bottom</item>
        <item>@string/listview_unfold</item>
        <item>@string/listview_fold</item>
        <item>@string/listview_translate_left</item>
        <item>@string/listview_translate_right</item>
        <item>@string/listview_rotate</item>
    </string-array>
    <string-array name="listview_animation_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="listview_interpolator_entries">
        <item>@string/listview_off</item>
        <item>@string/listview_accelerate_interpolator</item>
        <item>@string/listview_decelerate_interpolator</item>
        <item>@string/listview_accelerate_decelerate_interpolator</item>
        <item>@string/listview_anticipate_interpolator</item>
        <item>@string/listview_overshoot_interpolator</item>
        <item>@string/listview_anticipate_overshoot_interpolator</item>
        <item>@string/listview_bounce_interpolator</item>
    </string-array>
    <string-array name="listview_interpolator_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="listview_off">Desactivado</string>
    <string name="listview_wave_left">Ola (Izquierda)</string>
    <string name="listview_wave_right">Ola (Derecha)</string>
    <string name="listview_alpha">Alfa</string>
    <string name="listview_scale">Escala</string>
    <string name="listview_stack_top">Pila (Arriba)</string>
    <string name="listview_stack_bottom">Pila (Abajo)</string>
    <string name="listview_unfold">Desplegar</string>
    <string name="listview_fold">Plegar</string>
    <string name="listview_translate_left">Trasladar (Izquierda)</string>
    <string name="listview_translate_right">Trasladar (Derecha)</string>
    <string name="listview_rotate">Rotar</string>
    <string name="listview_accelerate_interpolator">Acelerar interpolador</string>
    <string name="listview_decelerate_interpolator">Desacelerar interpolador</string>
    <string name="listview_accelerate_decelerate_interpolator">Acelerar y desacelerar interpolador</string>
    <string name="listview_anticipate_interpolator">Anticipar interpolador</string>
    <string name="listview_overshoot_interpolator">Impulso interpolador</string>
    <string name="listview_anticipate_overshoot_interpolator">Anticipar impulso interpolador</string>
    <string name="listview_bounce_interpolator">Bote interpolador</string>
    <string-array name="home_doubletap">
        <item>Desactivado</item>
        <item>Linterna</item>
        <item>Kill App</item>
        <item>Apps Recientes</item>
        <item>Captura de pantalla</item>
        <item>Grabar pantalla</item>
        <item>Google Now</item>
        <item>Comando de voz (Stock)</item>
        <item>Bloquear pantalla</item>
    </string-array>
    <string-array name="home_doubletap_values">
        <item>8</item>
        <item>5</item>
        <item>3</item>
        <item>1</item>
        <item>2</item>
        <item>6</item>
        <item>7</item>
        <item>0</item>
        <item>9</item>
    </string-array>
    <string-array name="home_tripletap">
        <item>Desactivado</item>
        <item>Linterna</item>
        <item>Kill App</item>
        <item>Apps Recientes</item>
        <item>Captura de pantalla</item>
        <item>Grabar pantalla</item>
        <item>Google Now</item>
        <item>Comando de voz</item>
        <item>Bloquear pantalla</item>
    </string-array>
    <string-array name="home_tripletap_values">
        <item>0</item>
        <item>6</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>7</item>
        <item>8</item>
        <item>4</item>
        <item>9</item>
    </string-array>
    <string-array name="home_longpress">
        <item>Desactivado</item>
        <item>Linterna</item>
        <item>Kill App</item>
        <item>Apps Recientes (Stock)</item>
        <item>Captura de pantalla</item>
        <item>Grabar pantalla</item>
        <item>Google Now</item>
        <item>Comando de voz</item>
        <item>Bloquear pantalla</item>
    </string-array>
    <string-array name="home_longpress_values">
        <item>8</item>
        <item>5</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>6</item>
        <item>7</item>
        <item>3</item>
        <item>9</item>
    </string-array>
    <string-array name="left_shortpress">
        <item>Linterna</item>
        <item>Kill App</item>
        <item>Menú (Stock)</item>
        <item>Apps Recientes</item>
        <item>Captura de pantalla</item>
        <item>Grabar pantalla</item>
        <item>Google Now</item>
        <item>Comando de voz</item>
        <item>Bloquear pantalla</item>
    </string-array>
    <string name="hfm_disable_ads_title">Hosts Ads (publicidad)</string>
    <string name="hfm_disable_ads_summary_on">Publicidad desactivada</string>
    <string name="hfm_disable_ads_summary_off">Publicidad activada</string>
    <string name="hfm_update_hosts">Actualizar archivo hosts</string>
    <string name="hfm_update_hosts_summary">Descargar y aplicar hosts actualizado</string>
    <string name="pref_introduction">¿Qué hacer?</string>
  <string name="pref_introduction_summary">Por favor seleccione un servidor NTP cercano a su posición actual.
Cuanto más cerca esté, más rápido obtendrá su fijación GPS.
FasterGPS inmediatamente escribirá sus ajustes.</string>
    <string name="pref_ntp_current">Servidor actual:</string>
    <string name="pref_revert">Regresar a su antiguo archivo gps.conf</string>
  <string name="pref_revert_summary">Cuando FasterGPS comienza por primera vez, hace una copia de seguridad del fichero gps.conf.
Usando el comando \'revert\' puede restaurar dicho fichero.</string>
    <string name="pref_further_options">Otras opciones</string>
    <string name="pref_ntp">Servidor NTP</string>
    <string name="pref_ntp_continent">Continente</string>
    <string name="pref_ntp_continent_summary">Seleccione su continente.</string>
    <string name="pref_ntp_region">Región</string>
    <string name="pref_ntp_region_summary">Seleccione una región cercana a usted.</string>
    <string name="pref_ntp_custom">Personalizado</string>
    <string name="pref_ntp_custom_summary">Si el servidor personalizado es seleccionado, puedes definir un servidor NTP personalizado.</string>
    <string name="pref_advanced_settings">Ir a opciones avanzadas</string>
    <string name="set_shortcut_title">Para establecer un atajo personalizado, haga click en el botón de abajo:</string>
    <string name="set_app_title">O elija una aplicación de la lista:</string>
    <string name="set_shortcut_button">Establecer atajo personalizado</string>
</resources>