<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="fastergps_preferences">

    <Preference
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/pref_introduction_summary"
        android:title="@string/pref_introduction" />

    <PreferenceCategory android:key="category_npt" android:layout="@layout/preferences_category" android:title="@string/pref_ntp" >
        <ListPreference
            android:entries="@array/pref_ntp_continent_entries"
            android:entryValues="@array/pref_ntp_continent_entries_values"
            android:key="@string/pref_ntp_continent_key"
            android:persistent="false"
            android:summary="@string/pref_ntp_continent_summary"
            android:title="@string/pref_ntp_continent" />
        <ListPreference
            android:enabled="false"
            android:key="@string/pref_ntp_region_key"
            android:persistent="false"
            android:summary="@string/pref_ntp_region_summary"
            android:title="@string/pref_ntp_region" />

        <EditTextPreference
            android:enabled="false"
            android:key="@string/pref_ntp_custom_key"
            android:persistent="false"
            android:summary="@string/pref_ntp_custom_summary"
            android:title="@string/pref_ntp_custom" />

        <Preference
            android:key="@string/pref_ntp_current_key"
            android:persistent="false"
            android:selectable="false"
            android:summary=""
            android:title="@string/pref_ntp_current" />
    </PreferenceCategory>
    <PreferenceCategory android:key="category_options" android:layout="@layout/preferences_category" android:title="@string/pref_further_options" >
        <Preference
            android:key="@string/pref_advanced_settings_key"
            android:persistent="false"
            android:title="@string/pref_advanced_settings" />
        <Preference
            android:key="@string/pref_revert_key"
            android:persistent="false"
            android:summary="@string/pref_revert_summary"
            android:title="@string/pref_revert" />
    </PreferenceCategory>

</PreferenceScreen>