<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:icon="@drawable/ic_lcd"
        android:title="DPI Changer"
        android:summary="Cambia la densidad de la pantalla a tu gusto..."
        android:widgetLayout="@layout/round_more_icon" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.hctrom.romcontrol"
            android:targetClass="com.hctrom.romcontrol.dpichanger.DPIActivity"
            android:data="mydata" />
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/ic_emoji2"
        android:key="emojis_key"
        android:summary="Cambia entre diferentes emojis para el sistema."
        android:title="Emojis"
        android:widgetLayout="@layout/round_more_icon" />
    <PreferenceScreen
        android:icon="@drawable/ic_toolbox"
        android:key="toolbox"
        android:summary="Caja de herramientas para acceder a cualquier app de una forma más rápida."
        android:title="Toolbox"
        android:widgetLayout="@layout/round_more_icon" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.hctrom.romcontrol"
            android:targetClass="com.hctrom.romcontrol.toolboxsettings.ToolboxSettings"
            android:data="mydata" />
    </PreferenceScreen>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="AdBlocker">
        <CheckBoxPreference
            android:icon="@drawable/ic_adaway2"
            android:key="hfm_disable_ads"
            android:title="@string/hfm_disable_ads_title"
            android:summaryOn="@string/hfm_disable_ads_summary_on"
            android:summaryOff="@string/hfm_disable_ads_summary_off"
            android:persistent="false" />
        <Preference
            android:key="hfm_update_hosts"
            android:title="@string/hfm_update_hosts"
            android:summary="@string/hfm_update_hosts_summary"
            android:dependency="hfm_disable_ads" />
        <PreferenceScreen
            android:key="hfm_delete_dominio"
            android:title="Eliminar Dominio de Hosts"
            android:summary="Puede eliminar un dominio de la lista de bloqueo."
            android:dependency="hfm_disable_ads" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.hctrom.romcontrol"
                android:targetClass="com.hctrom.romcontrol.HostWhiteListView"
                android:data="mydata" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="CPUSpy">
        <PreferenceScreen
            android:icon="@drawable/ic_cpuspy2"
            android:key="cpu_spy"
            android:title="CPUSpy"
            android:summary="Puedes controlar la frecuencia a la que trabajan los procesadores." >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.hctrom.romcontrol"
                android:targetClass="com.hctrom.romcontrol.cpuspy.ui.HomeActivity"
                android:data="mydata" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="Faster GPS">
        <PreferenceScreen
            android:icon="@drawable/ic_faster_gps"
            android:key="faster_gps"
            android:title="Faster GPS"
            android:summary="Configura tu GPS de una forma óptima según tu situación." >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.hctrom.romcontrol"
                android:targetClass="com.hctrom.romcontrol.fastergps.ui.BaseActivity"
                android:data="mydata" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="CatLog">
        <PreferenceScreen
            android:icon="@drawable/ic_catlog"
            android:key="cat_log"
            android:title="CatLog"
            android:summary="Depura y encuentra errores a través de registros o Logs." >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.hctrom.romcontrol"
                android:targetClass="com.hctrom.romcontrol.logcat.LogcatActivity"
                android:data="mydata" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preferences_category" android:title="Build.prop Edit">
        <PreferenceScreen
            android:icon="@drawable/ic_aviso"
            android:key="build_prop"
            android:title="Build.prop Edit"
            android:summary="Puedes modificar/añadir datos al Build.prop. Si no se sabe lo que es o para que sirve, rogamos no modifiquen nada."
            android:widgetLayout="@layout/round_more_icon" />
    </PreferenceCategory>
</PreferenceScreen>