<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".geartwswipe.SetAppActivity"
    style="@style/AppTheme"
    android:background="?attr/nav_drawer_bg_color">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_default" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/titleSetShortcut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/set_shortcut_title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic"/>

        <Button
            android:id="@+id/chooseShortcut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleSetShortcut"
            android:layout_centerHorizontal="true"
            android:background="?android:attr/selectableItemBackground"
            android:elevation="4dp"
            android:onClick="chooseShortcut"
            android:padding="15dp"
            android:text="@string/set_shortcut_button"
            android:textColor="?attr/colorAccent"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/titleSetApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chooseShortcut"
            android:layout_centerHorizontal="true"
            android:text="@string/set_app_title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold|italic" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/titleSetApp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <ListView
                android:id="@+id/listView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:scrollbarStyle="outsideOverlay"
                android:smoothScrollbar="true"/>
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>
